<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textView_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editText_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_word"/>

    <Button
        android:id="@+id/button_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_words"/>

    <Button
        android:id="@+id/button_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_words"/>

    <Button
        android:id="@+id/button_showNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_words_next"/>

    <TextView
        android:id="@+id/textView_firstList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>